--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,4 @@
 ij_kotlin_allow_trailing_comma = true
 ij_kotlin_allow_trailing_comma_on_call_site = true
 ij_json_keep_trailing_comma = true
+insert_final_newline = true
